--- a/kylinframework/pom.xml
+++ b/kylinframework/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.leekitman.kylin</groupId>
     <artifactId>kylin-framework</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <dependencies>
         <dependency>
