--- a/kylinframework/pom.xml
+++ b/kylinframework/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>commons-dbcp2</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.6</version>
+        </dependency>
 
     </dependencies>
 
