--- a/kylinframework/pom.xml
+++ b/kylinframework/pom.xml
@@ -8,6 +8,12 @@
     <artifactId>kylin-framework</artifactId>
     <version>1.1</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
