--- a/kylinframework/pom.xml
+++ b/kylinframework/pom.xml
@@ -69,6 +69,11 @@
             <version>2.2.0</version>
         </dependency>
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
+        <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>3.2.5</version>
